2015-05-06  Alexey Proskuryakov  <ap@apple.com>

        Do not link tools to WebKit2.framework
        https://bugs.webkit.org/show_bug.cgi?id=144699

        Unreviewed build fix.

        * TestWebKitAPI/Configurations/TestWebKitAPI.xcconfig:
        * WebKitTestRunner/Configurations/WebKitTestRunner.xcconfig:
        These linked to WebKit2 in two ways, eliminating the other one.

2015-05-05  Myles C. Maxfield  <mmaxfield@apple.com>

        Introducing the Platform Abstraction Layer (PAL)
        https://bugs.webkit.org/show_bug.cgi?id=143358

        Reviewed by Simon Fraser.

        * Scripts/build-webkit: Add it to build-webkit.

2015-05-06  Alex Christensen  <achristensen@webkit.org>

        Fix api tests after r183877.

        * TestWebKitAPI/Tests/WebCore/ContentExtensions.cpp:
        (TestWebKitAPI::TEST_F):
        Generate all DFAs before compiling them.

2015-05-06  Alexey Proskuryakov  <ap@apple.com>

        Do not link tools to WebKit2.framework
        https://bugs.webkit.org/show_bug.cgi?id=144699

        Reviewed by Tim Horton.

        * MiniBrowser/MiniBrowser.xcodeproj/project.pbxproj:
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj:

2015-05-06  Alex Christensen  <achristensen@webkit.org>

        [Content Extensions] Test splitting NFAs by max NFA size.
        https://bugs.webkit.org/show_bug.cgi?id=144659

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WebCore/ContentExtensions.cpp:
        (TestWebKitAPI::createNFAs):
        (TestWebKitAPI::TEST_F):
        * TestWebKitAPI/Tests/WebCore/DFAMinimizer.cpp:
        (TestWebKitAPI::createNFAs):

2015-05-05  daegyu lee  <daegyu.lee@navercorp.com>

        Remove the remaining vestiges of SVG feature define
        https://bugs.webkit.org/show_bug.cgi?id=144655

        Reviewed by Alexey Proskuryakov.

        * Scripts/webkitperl/FeatureList.pm:
