@@ -1,3 +1,9 @@
+2015-05-06  Matt Baker  <mattbaker@apple.com>
+
+        Unreviewed, updated my list of email addresses.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2015-05-06  Alexey Proskuryakov  <ap@apple.com>
 
         Do not link tools to WebKit2.framework
